<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="compost">Compost</string>
    <string name="soil">Soil</string>
    <string name="water">Water</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
...
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
    <string name="select_calibration_point">Select calibration point</string>
    <string name="select_standard_measured">Select the value of the standard measured</string>
    <string name="color_shift">Color shift</string>
    <string name="skip">Skip</string>

    <!-- ErrorType -->
    <string name="no_error" tools:keep="@string/no_error">Error</string>
    <string name="no_match" tools:keep="@string/no_match">No match</string>
    <string name="calibration_error" tools:keep="@string/calibration_error">Calibration error</string>
    <string name="bad_lighting" tools:keep="@string/bad_lighting">Bad lighting</string>
...
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>

    <string name="ammonia" tools:keep="@string/ammonia">Ammonia</string>
    <string name="dissolved_oxygen" tools:keep="@string/dissolved_oxygen">Dissolved Oxygen</string>
    <string name="fluoride" tools:keep="@string/fluoride">Fluoride</string>
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="nitrite" tools:keep="@string/nitrite">Nitrite</string>
    <string name="nitrogen" tools:keep="@string/nitrogen">Nitrogen</string>
    <string name="organic_carbon" tools:keep="@string/organic_carbon">Organic Carbon</string>
...
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
    <string name="tilt_left_forwards">Tilt phone left side forwards</string>
    <string name="tilt_left_backwards">Tilt phone left side backwards</string>
    <string name="remove_response">Remove response</string>
    <string name="cancel">Cancel</string>
    <string name="yes_share">Yes Share</string>
    <string name="no_thanks">No Thanks</string>
    <string name="data_sharing">Data Sharing</string>

    <string name="comment">Comment</string>
    <string name="location">Location</string>
...
    <string name="gps_instructions">Stand near the water source but away from objects that could block the GPS signals</string>
    <string name="location_permission">Location permission is required</string>
    <string name="accuracy">Accuracy</string>
    <string name="getting_location">Getting location</string>
    <string name="accept_location">Accept</string>
    <string name="lat_lon">Lat/Lon</string>
    <string name="save">Save</string>
    <string name="required_error">This is required</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="info">Info</string>
    <string name="manual_photo_capture">Manual photo capture</string>
    <string name="manual_photo_summary">Turn this on if the auto photo capture is not working well on this phone</string>
    <string name="airplane_mode_off">Please turn off airplane mode</string>
...
    <string name="value_is_required">Value is required</string>
    <string name="titration_entry_error">%1$s has to be less than or equal to %2$s</string>
    <string name="titration">Titration</string>

    <string name="error_calibration_expired">Calibration is past its reagent expiry date</string>
    <string name="order_fresh_batch">Please order a fresh batch of reagent and recalibrate</string>
    <string name="load">Load</string>
    <string name="description">Description</string>
    <string name="save_calibration">Save calibration</string>
    <string name="calibration_already_saved">Calibration already saved as: %s</string>
    <string name="start_camera">Start camera</string>
    <string name="analyze">Analyze</string>
    <string name="analyze_sample">Analyze Sample</string>

    <string name="total_hardness">Total Hardness</string>
    <string name="total_alkalinity">Total Alkalinity</string>
    <string name="p_alkalinity">P-Alkalinity</string>
    <string name="t_alkalinity">T-Alkalinity</string>
    <string name="error_calibration_incomplete">Calibration for %1$s is incomplete</string>
    <string name="do_you_want_to_calibrate">Complete the calibration and try again</string>
    <string name="clear_calibration">Clear calibration</string>
    <string name="invalid_calibration">Invalid Calibration</string>
    <string name="calibration_not_available">External sensor mode</string>
    <string name="color_card_mode">Color card mode</string>
    <string name="no_result">No result</string>
...
    <string name="not_found">Not found</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="select_date">Select date</string>
    <string name="all_values_in_kg_ha">(All values in kg/ha)</string>
    <string name="redo_test">Redo</string>
    <string name="done">Done</string>
    <string name="c_empty">Empty contents of the cuvette and rinse it</string>
    <string name="external_app_not_installed">External app is not installed.</string>
    <string name="install_external_app">Please install the External app from your instance.</string>

    <string name="analytics_preferences">Usage data</string>
    <string name="analytics">Collect anonymous usage data</string>
...
