<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="false"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="2dp">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#222"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingBottom="7dp"
        android:textColor="?colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        tools:text="Description" />

    <io.ffem.lite.widget.SwatchView
        android:id="@+id/swatch_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="?colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swatch_view"
        tools:text="Description" />

</androidx.constraintlayout.widget.ConstraintLayout>


