...
    <string name="delete_all_data">Delete all photos and test results?</string>
    <string name="data_deleted">Data deleted</string>
    <string name="data">Data</string>
    <string name="delete_data">Delete all data and photos</string>
    <string name="dummy_image_message">Analyzing debug sample image</string>
    <string name="sample_image_not_found">Sample image not found</string>
    <string name="calibration_type">Calibration Type</string>

    <string name="grayscale_result">Grayscale result</string>
    <string name="grayscale_extracts">Grayscale Extracts</string>
    <string name="take_photo">Take photo</string>
    <string name="graph">Graph</string>

...
    <string name="fileAlreadyExists">File already exists</string>
    <string name="doYouWantToOverwrite">Do you want to overwrite the file?</string>
    <string name="overwrite">Overwrite</string>
    <string name="load_calibration">Load Calibration</string>
    <string name="load_calibration_warning">Are you sure you want to load and replace the current calibration?</string>
    <string name="notFound">Not Found</string>
    <string name="no_calibrations_saved">There are no previously saved calibrations</string>
    <string name="deleteConfirm">Selected items will be deleted</string>
    <string name="errorLoadingFile">Could not load file. Check file for errors.</string>
    <string name="fileSaved">File saved</string>
    <string name="delete_calibration">Delete calibration</string>
    <string name="calibration_deleted">Calibration deleted</string>
    <string name="calibration_loaded">Calibration loaded</string>
    <string name="calibration_saved">Calibration saved</string>
    <string name="delete_calibration_warning">Are you sure you want to delete this saved calibration?</string>

    <string name="test_with_arduino">Test with Arduino</string>
    <string name="externalSensor">External Sensor</string>
    <string name="color_card">Color Card Testing</string>

...
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_calibration_options">
        <item>"Minimal Calibration"</item>
        <item>"Full Calibration"</item>
    </string-array>

    <string-array name="pref_calibration_option_values">
        <item>0</item>
        <item>1</item>
    </string-array>
...
